# gamebaseX

./: .clang-format  .cnb.yml  .gitignore  CMakeLists.txt  README.md  gamebaseX.code-workspace  gitpush  gitpush.bat  inputConfig.json  start.cpp  version.rc  工作表.md
Engine/editor/: actorBrowser.h  actorChecker.cpp  actorChecker.h  assetBrowser.cpp  assetBrowser.h  editor.h  editorConfig.h  editorFrame.h  fileManager.cpp  fileManager.h  materialEditPanel.h  myEditor.cpp  referLine.cpp  referLine.h  worldEditor.cpp  worldEditor.h
Engine/editor/gui/imgui/: guiFromImgui.cpp  guiFromImgui.h  sample.md
Engine/editor/gui/imguiDx/: d11TextureAtlas.cpp  d11TextureAtlas.h  editorUiSystem.cpp  editorUiSystem.h  guiDx.cpp  guiDx.h  miniWindow.h
Engine/editor/gui/imguiDx/imguiLib/: imgui.cpp
Engine/gameFramework/: main.cpp
Engine/gameFramework/public/: GComman.cpp  GComman.h  GDebug.h  controller.h  controllerX.h  framework.cpp  framework.h  gameConfig.h  gameLog.h  gameStatics.h  gameui.h  gridWorld.h  gstring.h  heads.h  mygame.cpp  scriptExecutor.h  timeManager.h
Engine/gameFramework/public/base/: base.cpp  base.h  gJson.h  gmath.h  grids.h  registeredInfo.cpp  registeredInfo.h  saveObject.h  sourceRefer.h
Engine/gameFramework/public/editor/: editor.h
Engine/gameFramework/public/render/: gameShader.h  gsource.cpp  gsource.h  gtexture.cpp  gtexture.h  sprite.h  spriteUseShader.h
cpptest/: browserTest.h  drop.cpp  drop.hpp  fileNode.h  imguiTest.cpp  mainTest.cpp  stringCode.h
gameSample/: mygame.cpp
script/: cmakePreTasks.bat  importSource.bat  sourceImporter.py  tkpad0.py
script/python/: configureInput.py  framesToArray.py  generateCppFile.py  sourceImporter.py
script/python/module/: tkpad.py
